--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.14)
 project(sepplesDNS)
 set(CMAKE_CXX_STANDARD 17)
-include_directories(include)
 
-add_subdirectory(lib/fmt)
+if (WIN32)
+  add_subdirectory(lib/fmt)
+endif(WIN32)
+
+include_directories(include)
 
 file (GLOB BINS "src/*.cpp")
 add_executable(sepplesDNS ${BINS})
-target_link_libraries(sepplesDNS PUBLIC fmt::fmt-header-only)
+target_link_libraries(sepplesDNS PUBLIC fmt::fmt)
