attempting to adapt asio example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 project(sepplesDNS)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 if (WIN32)
   add_subdirectory(lib/fmt)
@@ -10,8 +10,11 @@ if (UNIX)
   find_package(fmt)
 endif (UNIX)
 
-include_directories(include)
+find_package(Boost)
+include_directories(${Boost_INCLUDE_DIRS} include)
+link_directories(${Boost_LIBRARY_DIRS})
 
 file (GLOB BINS "src/*.cpp")
 add_executable(sepplesDNS ${BINS})
-target_link_libraries(sepplesDNS PUBLIC fmt::fmt)
+
+target_link_libraries(sepplesDNS PUBLIC fmt::fmt ${Boost_LIBRARIES})
